# agent_email_kb

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
agent_email_kb/: emails.csv  pyproject.toml  teste1.ipynb
agent_email_kb/agent_email_kb/: teste1.ipynb
lab/: 0_llm_test_1.ipynb  1_download_emails.ipynb  1_download_emails_2.ipynb  2_group_threads.ipynb  2_group_threads_1.ipynb  2_test1.ipynb  3_2_summary_thread_1.ipynb  3_2_summary_thread_2.ipynb  3_3_summary_thread_1.ipynb  3_summary_thread_1.ipynb  3_summary_thread_3.ipynb  3_summary_thread_4.ipynb  3_summary_thread_5.ipynb  4_2_EDA_strings.ipynb  GmailSearch2.py
