[tool.poetry]
name = "agent-email-kb"
version = "0.1.0"
description = ""
authors = ["rhuanbarros <rhuanbarros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.7"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"
iprogress = "^0.4"
google-api-python-client = "^2.137.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
beautifulsoup4 = "^4.12.3"
langchain-community = "^0.2.7"
pandas = "^2.2.2"
langchain-openai = "^0.1.16"
python-dotenv = "^1.0.1"
g4f = "^0.3.2.2"
langchain-g4f = {git = "https://github.com/MIDORIBIN/langchain-gpt4free.git"}
curl-cffi = "^0.7.1"
transformers = "^4.42.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
